<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/marketplace" />

    <item
        android:id="@+id/navigation_auctions"
        android:icon="@drawable/ic_auction"
        android:title="@string/auctions" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_payment"
        android:title="@string/payments" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
